--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,6 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.ahar'
