--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.coursion.mediapickerlib"
+        applicationId "com.coursionexample.mediapickerlib"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
